# composer-theory

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
composer_theory/: API.md  README.md  __init__.py  tools.py
composer_theory/domain/: __init__.py  chord.py  color_shift.py  dissonance.py  ids.py  key.py  mode.py  mode_specs.py  quality.py  scale.py
composer_theory/domain/enums/: core.py  harmony.py  runtime.py  texture.py
composer_theory/implement/: __init__.py
composer_theory/relations/: __init__.py  chord_in_key.py  chord_in_mode.py  hit.py  mode_in_key.py  tools.py
composer_theory/resolve/: resolver.py
composer_theory/tests/: print_c_ionian_subv_scales.py  test_id_indexing.py  test_relation_analysis.py
